--- a/module-1/week-1/day-3-python-2/python-2-working.ipynb
+++ b/module-1/week-1/day-3-python-2/python-2-working.ipynb
@@ -31,8 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "items = ['cheese', 'whole milk', 'kefir', 'tofu four-pack', 'kale', 'oranges', 'ham', 'ben & jerry\\'s']\n",
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -115,39 +117,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{\"ben & jerry's\": 5.29,\n",
-       " 'cheese': 2.79,\n",
-       " 'ham': 25.0,\n",
-       " 'kale': 2.75,\n",
-       " 'kefir': 4.5,\n",
-       " 'oranges': 3.64,\n",
-       " 'tofu four-pack': 12.0,\n",
-       " 'whole milk': 3.42}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grocery_dict = {}\n",
-    "index = 0\n",
-    "for item in items:\n",
-    "    grocery_dict[item] = cost[index]\n",
-    "    index += 1\n",
-    "    \n",
-    "grocery_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -170,13 +139,11 @@
     }
    ],
    "source": [
-    "# this time with enumerate\n",
-    "# enumerate automatically includes and index that is started as 0 (by default) \n",
-    "# and incremented for as long as items has another item\n",
     "grocery_dict = {}\n",
-    "\n",
-    "for index, item in enumerate(items):\n",
+    "index = 0\n",
+    "for item in items:\n",
     "    grocery_dict[item] = cost[index]\n",
+    "    index += 1\n",
     "    \n",
     "grocery_dict"
    ]
@@ -205,6 +172,41 @@
     }
    ],
    "source": [
+    "# this time with enumerate\n",
+    "# enumerate automatically includes and index that is started as 0 (by default) \n",
+    "# and incremented for as long as items has another item\n",
+    "grocery_dict = {}\n",
+    "\n",
+    "for index, item in enumerate(items):\n",
+    "    grocery_dict[item] = cost[index]\n",
+    "    \n",
+    "grocery_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{\"ben & jerry's\": 5.29,\n",
+       " 'cheese': 2.79,\n",
+       " 'ham': 25.0,\n",
+       " 'kale': 2.75,\n",
+       " 'kefir': 4.5,\n",
+       " 'oranges': 3.64,\n",
+       " 'tofu four-pack': 12.0,\n",
+       " 'whole milk': 3.42}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "dict(zip(items, cost))"
    ]
   },
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +228,7 @@
        "59.39"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -372,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -648,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +867,7 @@
        "101"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1006,12 +1008,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cheese': 2.79, 'whole milk': 3.42, 'kefir': 4.5, 'tofu four-pack': 12.0, 'kale': 2.75, 'oranges': 3.64, 'tic tac': 0.03}\n",
+      "29.13\n",
+      "4.16\n"
+     ]
+    }
+   ],
+   "source": [
+    "stop_at = 30\n",
+    "grocery_dict = {}\n",
+    "running_total = 0\n",
+    "\n",
+    "for index, item in enumerate(items):\n",
+    "    if running_total + cost[index] <= stop_at:\n",
+    "        grocery_dict[item] = cost[index]\n",
+    "        running_total += cost[index]\n",
+    "print(grocery_dict)\n",
+    "print(round(sum(grocery_dict.values()),2))\n",
+    "print(round(sum(grocery_dict.values())/len(grocery_dict),2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1024,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1081,7 @@
        "<IPython.core.display.Math object>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
