post-class working file

--- a/module-1/morning-warm-up/week-1/1_2_For Loops-working.ipynb
+++ b/module-1/morning-warm-up/week-1/1_2_For Loops-working.ipynb
@@ -60,8 +60,7 @@
     "for i, x in enumerate(numbers):\n",
     "    if x == target:\n",
     "        print(i)\n",
-    "        break\n",
-    "    "
+    "        break"
    ]
   },
   {
