--- a/module-1/morning-warm-up/week-1/1_2_For Loops.ipynb
+++ b/module-1/morning-warm-up/week-1/1_2_For Loops.ipynb
@@ -23,15 +23,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-=======
    "execution_count": null,
    "metadata": {},
->>>>>>> b4099a19601b2857e0ae87d569bd6b7525cc1c0e
    "outputs": [],
    "source": [
     "numbers = [8,5,9,2,4,0]"
@@ -39,15 +32,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-=======
    "execution_count": null,
    "metadata": {},
->>>>>>> b4099a19601b2857e0ae87d569bd6b7525cc1c0e
    "outputs": [],
    "source": [
     "target = 9"
@@ -55,24 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, x in enumerate(numbers):\n",
-    "    if x == target:\n",
-    "        print(i)\n",
-    "        break\n",
-    "    "
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -91,15 +63,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-=======
    "execution_count": null,
    "metadata": {},
->>>>>>> b4099a19601b2857e0ae87d569bd6b7525cc1c0e
    "outputs": [],
    "source": [
     "numbers2 = [3,2,9,5,9,4,0,1,9]"
@@ -107,26 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "4\n",
-      "8\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, x in enumerate(numbers2):\n",
-    "    if x == target:\n",
-    "        print(i)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -151,15 +102,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-=======
    "execution_count": null,
    "metadata": {},
->>>>>>> b4099a19601b2857e0ae87d569bd6b7525cc1c0e
    "outputs": [],
    "source": [
     "my_dict = {\n",
@@ -173,34 +117,11 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 22,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'black': [9, 4],\n",
-       " 'blue': [4, 8],\n",
-       " 'green': [0, 3],\n",
-       " 'orange': [6, 8],\n",
-       " 'red': [2, 1]}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-=======
    "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
->>>>>>> b4099a19601b2857e0ae87d569bd6b7525cc1c0e
    "source": [
     "my_dict"
    ]
@@ -232,37 +153,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'blue': [4, 8], 'red': [2, 1], 'green': [0, 3], 'orange': [6, 8]}\n"
-     ]
-    }
-   ],
-   "source": [
-    "pop_list =[]\n",
-    "for k, v in my_dict.items():\n",
-    "    for item in v:\n",
-    "        if item == 9:\n",
-    "            pop_list.append(k)\n",
-    "            continue\n",
-    "\n",
-    "for pop_key in pop_list:\n",
-    "    my_dict.pop(pop_key)\n",
-    "\n",
-    "print(my_dict)        "
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -274,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
