--- a/module-1/morning-warm-up/week-1/1_3_Numpy_practice-working.ipynb
+++ b/module-1/morning-warm-up/week-1/1_3_Numpy_practice-working.ipynb
@@ -12,11 +12,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "my_array = []"
+    "my_array = [5,3,8,9,2]"
    ]
   },
   {
@@ -64,6 +65,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,   3,   6,   9,  12,  15,  18,  21,  24,  27,  30,  33,  36,\n",
+       "        39,  42,  45,  48,  51,  54,  57,  60,  63,  66,  69,  72,  75,\n",
+       "        78,  81,  84,  87,  90,  93,  96,  99, 102, 105, 108, 111, 114,\n",
+       "       117, 120, 123, 126, 129])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.full(len(range(0, 130, 3)), range(0, 130, 3))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,12 +114,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones([8,5])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,12 +170,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.eye(8)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,12 +224,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[9., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 9., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 9., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 9., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 9., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 9., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 9., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 9.]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.eye(8)*9"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,15 +293,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3 µs, sys: 1 µs, total: 4 µs\n",
-      "Wall time: 6.2 µs\n",
+      "Wall time: 0 ns\n",
       "This is how long this code block takes to run^\n"
      ]
     }
@@ -226,8 +320,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np_array = np.array([2, 6, 1, 9, 10, 3, 27, 50])"
@@ -235,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -244,17 +340,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 µs, sys: 1 µs, total: 5 µs\n",
-      "Wall time: 7.39 µs\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(array([1, 3, 4]),)"
+       "(array([1, 3, 4], dtype=int64),)"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,8 +362,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "reg_array = [2, 6, 1, 9, 10, 3, 27, 50]"
@@ -276,15 +373,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5 µs, sys: 1e+03 ns, total: 6 µs\n",
-      "Wall time: 10 µs\n",
+      "Wall time: 0 ns\n",
       "1\n",
       "3\n",
       "4\n"
@@ -301,16 +397,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "learn-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -322,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
