my lecture notebook sql

--- a/module-1/week-2/day-3-seaborn/seaborn-working.ipynb
+++ b/module-1/week-2/day-3-seaborn/seaborn-working.ipynb
@@ -564,7 +564,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_clean.regions = df.index.apply(lambda x: list(df.loc[df.index == x, 'region']))"
+   ]
   },
   {
    "cell_type": "markdown",
