--- a/module-2/week-1/day-1-sql-pandas/sql-to-pandas-working.ipynb
+++ b/module-2/week-1/day-1-sql-pandas/sql-to-pandas-working.ipynb
@@ -754,6 +754,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Having**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
