--- a/blogs/blog_2/weather_api_exploring.ipynb
+++ b/blogs/blog_2/weather_api_exploring.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "import numpy as np"
    ]
   },
   {
@@ -19943,6 +19944,520 @@
    "source": [
     "print(len(dc_hrly_temp_datasets_df.datatype.unique()))\n",
     "dc_hrly_temp_datasets_df.datatype.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_url = 'ftp://ftp.ncdc.noaa.gov'\n",
+    "rel_url = '/pub/data/noaa/isd-lite/2019/724050-13743-2019.gz'\n",
+    "asos_fwf_cols = ['year', 'month', 'day', 'hour', 'air_temp_c', 'dew_pt_temp_c',\n",
+    "                 'sea_lvl_press_hectoPa', 'wnd_dir_360', 'wnd_spd_mtrpersec',\n",
+    "                 'sky_condition', 'precip_hrly', 'precip_6hr_accum']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_url = 'ftp://ftp.ncdc.noaa.gov'\n",
+    "rel_url = '/pub/data/noaa/isd-lite/2019/724050-13743-2019.gz'\n",
+    "asos_fwf_cols = ['year', 'month', 'day', 'hour', 'air_temp_c', 'dew_pt_temp_c',\n",
+    "                 'sea_lvl_press_hectoPa', 'wnd_dir_360', 'wnd_spd_mtrpersec',\n",
+    "                 'sky_condition', 'precip_hrly', 'precip_6hr_accum']\n",
+    "asos_df = pd.read_fwf(base_url+rel_url, header=None)\n",
+    "asos_df.columns = asos_fwf_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>air_temp_c</th>\n",
+       "      <th>dew_pt_temp_c</th>\n",
+       "      <th>sea_lvl_press_hectoPa</th>\n",
+       "      <th>wnd_dir_360</th>\n",
+       "      <th>wnd_spd_mtrpersec</th>\n",
+       "      <th>sky_condition</th>\n",
+       "      <th>precip_hrly</th>\n",
+       "      <th>precip_6hr_accum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>89</td>\n",
+       "      <td>78</td>\n",
+       "      <td>10165</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>83</td>\n",
+       "      <td>72</td>\n",
+       "      <td>10152</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-9999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>89</td>\n",
+       "      <td>78</td>\n",
+       "      <td>10137</td>\n",
+       "      <td>190</td>\n",
+       "      <td>26</td>\n",
+       "      <td>-9999</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-9999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>100</td>\n",
+       "      <td>89</td>\n",
+       "      <td>10127</td>\n",
+       "      <td>220</td>\n",
+       "      <td>31</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-9999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>89</td>\n",
+       "      <td>10116</td>\n",
+       "      <td>220</td>\n",
+       "      <td>21</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-9999</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  month  day  hour  air_temp_c  dew_pt_temp_c  sea_lvl_press_hectoPa  \\\n",
+       "0  2019      1    1     0          89             78                  10165   \n",
+       "1  2019      1    1     1          83             72                  10152   \n",
+       "2  2019      1    1     2          89             78                  10137   \n",
+       "3  2019      1    1     3         100             89                  10127   \n",
+       "4  2019      1    1     4         100             89                  10116   \n",
+       "\n",
+       "   wnd_dir_360  wnd_spd_mtrpersec  sky_condition  precip_hrly  \\\n",
+       "0            0                  0              8        -9999   \n",
+       "1            0                  0          -9999           -1   \n",
+       "2          190                 26          -9999            3   \n",
+       "3          220                 31              8           -1   \n",
+       "4          220                 21              9            3   \n",
+       "\n",
+       "   precip_6hr_accum  \n",
+       "0                80  \n",
+       "1             -9999  \n",
+       "2             -9999  \n",
+       "3             -9999  \n",
+       "4             -9999  "
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "asos_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asos_df.replace({-9999: np.nan}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>air_temp_c</th>\n",
+       "      <th>dew_pt_temp_c</th>\n",
+       "      <th>sea_lvl_press_hectoPa</th>\n",
+       "      <th>wnd_dir_360</th>\n",
+       "      <th>wnd_spd_mtrpersec</th>\n",
+       "      <th>sky_condition</th>\n",
+       "      <th>precip_hrly</th>\n",
+       "      <th>precip_6hr_accum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>10165.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>10152.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>10137.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>10127.0</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>10116.0</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     year  month  day  hour  air_temp_c  dew_pt_temp_c  sea_lvl_press_hectoPa  \\\n",
+       "0  2019.0    1.0  1.0   0.0        89.0           78.0                10165.0   \n",
+       "1  2019.0    1.0  1.0   1.0        83.0           72.0                10152.0   \n",
+       "2  2019.0    1.0  1.0   2.0        89.0           78.0                10137.0   \n",
+       "3  2019.0    1.0  1.0   3.0       100.0           89.0                10127.0   \n",
+       "4  2019.0    1.0  1.0   4.0       100.0           89.0                10116.0   \n",
+       "\n",
+       "   wnd_dir_360  wnd_spd_mtrpersec  sky_condition  precip_hrly  \\\n",
+       "0          0.0                0.0            8.0          NaN   \n",
+       "1          0.0                0.0            NaN         -1.0   \n",
+       "2        190.0               26.0            NaN          3.0   \n",
+       "3        220.0               31.0            8.0         -1.0   \n",
+       "4        220.0               21.0            9.0          3.0   \n",
+       "\n",
+       "   precip_6hr_accum  \n",
+       "0              80.0  \n",
+       "1               NaN  \n",
+       "2               NaN  \n",
+       "3               NaN  \n",
+       "4               NaN  "
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "asos_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaled_columns = ['air_temp_c', 'dew_pt_temp_c', 'sea_lvl_press_hectoPa', \n",
+    "                  'wnd_spd_mtrpersec', 'precip_hrly', 'precip_6hr_accum']\n",
+    "scaling_factor = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# removing scaling factor\n",
+    "asos_df[scaled_columns] = asos_df[scaled_columns] / 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>air_temp_c</th>\n",
+       "      <th>dew_pt_temp_c</th>\n",
+       "      <th>sea_lvl_press_hectoPa</th>\n",
+       "      <th>wnd_dir_360</th>\n",
+       "      <th>wnd_spd_mtrpersec</th>\n",
+       "      <th>sky_condition</th>\n",
+       "      <th>precip_hrly</th>\n",
+       "      <th>precip_6hr_accum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>1016.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>1015.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>1013.7</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>1012.7</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>1011.6</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     year  month  day  hour  air_temp_c  dew_pt_temp_c  sea_lvl_press_hectoPa  \\\n",
+       "0  2019.0    1.0  1.0   0.0         8.9            7.8                 1016.5   \n",
+       "1  2019.0    1.0  1.0   1.0         8.3            7.2                 1015.2   \n",
+       "2  2019.0    1.0  1.0   2.0         8.9            7.8                 1013.7   \n",
+       "3  2019.0    1.0  1.0   3.0        10.0            8.9                 1012.7   \n",
+       "4  2019.0    1.0  1.0   4.0        10.0            8.9                 1011.6   \n",
+       "\n",
+       "   wnd_dir_360  wnd_spd_mtrpersec  sky_condition  precip_hrly  \\\n",
+       "0          0.0                0.0            8.0          NaN   \n",
+       "1          0.0                0.0            NaN         -0.1   \n",
+       "2        190.0                2.6            NaN          0.3   \n",
+       "3        220.0                3.1            8.0         -0.1   \n",
+       "4        220.0                2.1            9.0          0.3   \n",
+       "\n",
+       "   precip_6hr_accum  \n",
+       "0               8.0  \n",
+       "1               NaN  \n",
+       "2               NaN  \n",
+       "3               NaN  \n",
+       "4               NaN  "
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "asos_df.head()"
    ]
   }
  ],
