--- a/module-2/morning-warm-up/warmups-working.ipynb
+++ b/module-2/morning-warm-up/warmups-working.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1390,24 +1390,23 @@
     "conn_dog = sqlite3.connect('dogs.db')\n",
     "dogs = conn_dog.cursor()\n",
     "conn_own = sqlite3.connect('owners.db')\n",
-    "owners = conn_own.cursor()"
+    "own = conn_own.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "database cats is already in use",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-88-bcf845db0726>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mown\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\"\"ATTACH DATABASE \"cats.db\" AS cats\"\"\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mown\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\"\"ATTACH DATABASE \"dogs.db\" AS dogs\"\"\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOperationalError\u001b[0m: database cats is already in use"
-     ]
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x18b278e4dc0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1417,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1426,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-92-4e5719d1218c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m own.execute(\"\"\"ALTER TABLE cats\n\u001b[0;32m      2\u001b[0m                \u001b[0mADD\u001b[0m \u001b[0mType\u001b[0m \u001b[0mTEXT\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \"\"\")\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-16-4e5719d1218c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m own.execute(\"\"\"ALTER TABLE cats\n\u001b[0;32m      2\u001b[0m                \u001b[0mADD\u001b[0m \u001b[0mType\u001b[0m \u001b[0mTEXT\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \"\"\")\n\u001b[0m",
       "\u001b[1;31mOperationalError\u001b[0m: duplicate column name: Type"
      ]
     }
@@ -1440,9 +1439,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "duplicate column name: Type",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-18b5a13c95c1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m own.execute(\"\"\"ALTER TABLE dogs\n\u001b[0;32m      2\u001b[0m                \u001b[0mADD\u001b[0m \u001b[0mType\u001b[0m \u001b[0mTEXT\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \"\"\")\n\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m: duplicate column name: Type"
+     ]
+    }
+   ],
    "source": [
     "own.execute(\"\"\"ALTER TABLE dogs\n",
     "               ADD Type TEXT\n",
@@ -1451,9 +1462,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x18b278e4dc0>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "own.execute(\"\"\"UPDATE cats\n",
     "               SET Type = \"Cat\"\n",
@@ -1462,9 +1484,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x18b278e4dc0>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "own.execute(\"\"\"UPDATE dogs\n",
     "               SET Type = \"Dog\"\n",
@@ -1473,16 +1506,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x22f91a77420>"
+       "<sqlite3.Cursor at 0x18b278e4dc0>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1631,7 @@
        "10    Precious           Justin Bieber"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1618,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1667,7 +1700,7 @@
        "1         Rex  Avi Flombaum"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1688,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1806,7 @@
        "4    Samson      Javanese            5        1  Cat"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1789,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1883,7 +1916,7 @@
        "5       Leo   English Bulldog            1        2  Dog"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1966,7 +1999,7 @@
        "4            5             1"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1993,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2027,28 +2060,22 @@
        "      <td>Alison Peebles Madigan</td>\n",
        "      <td>2147098190</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Alison Peebles Madigan</td>\n",
-       "      <td>2147098190</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "               owner_name       Phone\n",
-       "0  Alison Peebles Madigan  2147098190\n",
-       "1  Alison Peebles Madigan  2147098190"
+       "0  Alison Peebles Madigan  2147098190"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "own.execute(\"\"\"SELECT owners.Name as owner_name, Phone\n",
+    "own.execute(\"\"\"SELECT DISTINCT owners.Name as owner_name, Phone\n",
     "               FROM owners\n",
     "               JOIN (SELECT * FROM cats\n",
     "                     UNION\n",
