--- a/blogs/blog_2/Hourly_Weather_Aggregator.ipynb
+++ b/blogs/blog_2/Hourly_Weather_Aggregator.ipynb
@@ -824,6 +824,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mapping the 1000 Active US Airport Weather Stations with the Longest Recorded History\n",
+    "\n",
+    "The map created below shows active (defined as having reported weather data in the last 3 days)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -895,7 +904,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_map = folium.Map([38.6270, -90.1994], zoom_start=4)\n",
+    "base_map = folium.Map([38.6270, -90.1994], zoom_start=3)\n",
     "# Also, limiting it to 1000 locations\n",
     "for index, coord in enumerate(us_airports_with_coordinates['COORDINATES'].head(1000)):\n",
     "    marker = folium.Marker([coord[0],coord[1]], popup=us_airports_with_coordinates.iloc[index]['IDENTIFIER']).add_to(base_map)"
@@ -923,6 +932,15 @@
    "source": [
     "# base_map = folium.Map([38.6270, -90.1994], zoom_start=4)\n",
     "base_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.save('312_markers_on_folium_map1.html'"
    ]
   }
  ],
