--- a/module-3/conditional_probability_Random_variables/conditional_probability.ipynb
+++ b/module-3/conditional_probability_Random_variables/conditional_probability.ipynb
@@ -134,16 +134,50 @@
    "metadata": {},
    "source": [
     "#### Example:\n",
-    "Let’s say a medical test is 99 percent reliable. That is, 99 out of 100 people who have cancer will test positive, and 99 out of 100 who are healthy will test negative. That’s still a terrific test. If your test is positive, how probable is it that you have cancer?\n",
+    "Let’s say a medical test is 99 percent reliable. That is, 99 out of 100 people who have cancer will test positive, and 99 out of 100 who are healthy will test negative. That’s still a terrific test. If your test is positive, how probable is it that you have cancer? 1 percent have cancer.\n",
     "\n",
     "\n",
     "Your Answer is here:\n",
     "\n",
     "\n",
-    "__Note__ There are still lot's of details about probability which we couldn't discuss because of the time constraints. So please make sure that you read the learn.co materials and reading assignments very carefully. \n",
-    "\n",
-    "\n",
-    "\n",
+    "__Note__ There are still lot's of details about probability which we couldn't discuss because of the time constraints. So please make sure that you read the learn.co materials and reading assignments very carefully. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "P(cancer given positive) =  P(cancer given positive) * P(cancer) / P(positive)\n",
+    "                         =           0.99            *    0.01   /     ?\n",
+    "P(positive) = P(positive given cancer) * P(cancer) + P(positive given no cancer) * P(no cancer)\n",
+    "     ?      =         0.99             *    0.01   +           0.01              *      0.99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pcgp = (0.99*0.01) / ((0.99*0.01)+(0.01*0.99))\n",
+    "Pcgp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Random Variables\n",
     "\n",
     "Recall that to be able to define a probability we need a triple $(\\Omega, \\mathcal{E}, P)$ where $\\Omega$ is the sample space, $\\mathcal{E}$ is the set of all well-defined events and $P$ is the function that assigns a probability for each events. \n",
@@ -222,7 +256,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
