simplified notebook for medium

--- a/blogs/blog_2/Hourly_Weather_Aggregator.ipynb
+++ b/blogs/blog_2/Hourly_Weather_Aggregator.ipynb
@@ -177,7 +177,7 @@
     "# Importing the table defining the available data. \n",
     "# There is a row for each station and it includes the begin and end date of available data.\n",
     "isd_stations_data = pd.read_csv('ftp://ftp.ncdc.noaa.gov/pub/data/noaa/isd-history.csv')\n",
-    "isd_stations_data.head()"
+    "# isd_stations_data.head()"
    ]
   },
   {
