two sample t test added

--- a/module-3/hypothesis_testing/hypothesis_testing.ipynb
+++ b/module-3/hypothesis_testing/hypothesis_testing.ipynb
@@ -98,6 +98,15 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -126,23 +135,23 @@
     "\n",
     "\n",
     "# Population mean (μ)\n",
-    "mu =  \n",
+    "mu =  100\n",
     "\n",
     "# Sample mean (x̄) using NumPy mean()\n",
-    "x_bar = \n",
+    "x_bar = sample.mean()\n",
     "\n",
     "# Sample Standard Deviation (sigma) using Numpy\n",
-    "sigma = \n",
+    "sigma = np.std(sample,ddof=1)\n",
     "\n",
     "\n",
     "# Sample size (n)\n",
-    "n = \n",
+    "n = 25\n",
     "\n",
     "# Degrees of Freedom\n",
     "df = n-1\n",
     "\n",
     "# Difference in sample mean \n",
-    "diff = \n",
+    "diff = x_bar - mu\n",
     "\n",
     "\n",
     "# Print the findings\n",
@@ -166,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +265,7 @@
        "3.578139767278185"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
